updated complex scoring

--- a/notebooks/transe_traversal_complex_queries.ipynb
+++ b/notebooks/transe_traversal_complex_queries.ipynb
@@ -46,7 +46,7 @@
     "savedir = f'/home/gebhart/projects/sheaf_kg/data/{dataset}'\n",
     "complex_dataset_loc = f'/home/gebhart/projects/sheaf_kg/data/{dataset}-betae'\n",
     "\n",
-    "test_query_structures = ['1p','2p','3p','2i','3i','ip','pi']"
+    "test_query_structures = ['1p','2p','3p','2i','3i','ip','pi']\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,15 +95,42 @@
     "                all_answers = test_data[query_structure]['answers'][qix:qix+test_batch_size]\n",
     "                targets = torch.arange(model.entity_embeddings(indices=None).shape[0]).to(model.device)\n",
     "                Q = fun_map[query_structure](model, entities, relations, targets, invs=inverses, p=1)\n",
-    "                \n",
-    "                max_len = len(max(all_answers, key=len))\n",
-    "                for i in range(max_len):\n",
-    "                    answers = [a[i] if len(a) > i else a[-1] for a in all_answers ]\n",
-    "                    if len(answers) > 0:\n",
-    "                        ranks = rank_based_evaluator.compute_rank_from_scores(Q[np.vstack((np.arange(len(answers)), answers))].unsqueeze(1), Q)\n",
-    "                        avg_rank = ranks['realistic'].cpu().numpy()\n",
-    "                        all_avg_ranks.append(avg_rank)\n",
-    "            all_avg_ranks = np.concatenate(all_avg_ranks)\n",
+    "                for b in range(Q.shape[0]):\n",
+    "                    answers = all_answers[b]\n",
+    "                    for i in range(len(answers)):\n",
+    "                        a = answers[i]\n",
+    "                        msk = torch.ones(Q.shape[1], dtype=bool)\n",
+    "                        msk[answers] = False\n",
+    "                        msk[a] = True\n",
+    "                        rank = rank_based_evaluator.compute_rank_from_scores(Q[b,a].unsqueeze(0), Q[b,msk].unsqueeze(0))\n",
+    "                        avg_rank = rank['realistic'].cpu().numpy()\n",
+    "                        all_avg_ranks.append(avg_rank[0])\n",
+    "            all_avg_ranks = np.array(all_avg_ranks)\n",
+    "#                 max_len = len(max(all_answers, key=len))\n",
+    "#                 mask = np.ones(Q.shape, dtype=bool)\n",
+    "#                 for i in range(max_len):\n",
+    "#                     tmask = mask.copy()\n",
+    "#                     answers = []\n",
+    "#                     idxs = []\n",
+    "#                     for j in range(len(all_answers)):\n",
+    "#                         a = all_answers[j]\n",
+    "#                         if len(a) > i:\n",
+    "#                             answers.append(a[i])\n",
+    "#                             idxs.append(j)\n",
+    "#                             tmask[j,] = 0\n",
+    "#                         else:\n",
+    "#                             tmask[j,:] = 0\n",
+    "# #                     answers = [a[i] if len(a) > i else a[-1] for a in all_answers ]\n",
+    "# #                     idxs = np.arange(len(answers))\n",
+    "# #                     answers = [a[i] for a in all_answers if len(a) > i]\n",
+    "# #                     idxs = [j for j in range(len(all_answers)) if len(all_answers[j]) > i]\n",
+    "#                     if len(answers) > 0:\n",
+    "#                         print(tmask)\n",
+    "#                         ranks = rank_based_evaluator.compute_rank_from_scores(Q[np.vstack((idxs, answers))].unsqueeze(1), Q[tmask])\n",
+    "#                         avg_rank = ranks['realistic'].cpu().numpy()\n",
+    "#                         all_avg_ranks.append(avg_rank - i + 1)\n",
+    "#             all_avg_ranks = np.concatenate(all_avg_ranks)\n",
+    "            \n",
     "            rd = {k: np.mean(all_avg_ranks <= k) for k in ks}\n",
     "            mrr = np.reciprocal(stats.hmean(all_avg_ranks))\n",
     "            rd['mrr'] = mrr if isinstance(mrr, float) else mrr[0]\n",
@@ -116,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 2/1631 [00:00<01:36, 16.96it/s]"
+      "  0%|          | 8/1631 [00:00<00:21, 76.66it/s]"
      ]
     },
     {
@@ -147,7 +174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1631/1631 [07:20<00:00,  3.71it/s]\n",
+      "100%|██████████| 1631/1631 [03:10<00:00,  8.55it/s]\n",
       "  0%|          | 0/489 [00:00<?, ?it/s]"
      ]
     },
@@ -162,7 +189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 489/489 [09:03<00:00,  1.11s/it]\n",
+      "100%|██████████| 489/489 [04:40<00:00,  1.74it/s]\n",
       "  0%|          | 0/487 [00:00<?, ?it/s]"
      ]
     },
@@ -177,8 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 487/487 [02:06<00:00,  3.86it/s]\n",
-      "  1%|          | 5/426 [00:00<00:16, 26.09it/s]"
+      "100%|██████████| 487/487 [07:03<00:00,  1.15it/s]\n",
+      "  0%|          | 0/426 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -192,8 +219,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 426/426 [00:19<00:00, 21.58it/s]\n",
-      "  1%|          | 3/320 [00:00<00:12, 25.64it/s]"
+      "100%|██████████| 426/426 [00:53<00:00,  7.95it/s]\n",
+      "  0%|          | 0/320 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -207,8 +234,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 320/320 [00:13<00:00, 22.88it/s]\n",
-      "  0%|          | 1/455 [00:00<00:59,  7.58it/s]"
+      "100%|██████████| 320/320 [00:52<00:00,  6.08it/s]\n",
+      "  0%|          | 0/455 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -222,8 +249,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 455/455 [01:05<00:00,  6.92it/s]\n",
-      "  0%|          | 1/429 [00:00<01:08,  6.27it/s]"
+      "100%|██████████| 455/455 [04:15<00:00,  1.78it/s]\n",
+      "  0%|          | 0/429 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -237,7 +264,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 429/429 [00:35<00:00, 12.20it/s]\n"
+      "100%|██████████| 429/429 [01:50<00:00,  3.88it/s]\n"
      ]
     },
     {
@@ -271,76 +298,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1p</th>\n",
-       "      <td>1.876706</td>\n",
-       "      <td>5.326477</td>\n",
-       "      <td>7.221794</td>\n",
-       "      <td>11.578818</td>\n",
-       "      <td>5.211004</td>\n",
+       "      <td>1.400165</td>\n",
+       "      <td>3.759938</td>\n",
+       "      <td>5.508668</td>\n",
+       "      <td>8.765593</td>\n",
+       "      <td>3.836776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2p</th>\n",
-       "      <td>0.071693</td>\n",
-       "      <td>0.200202</td>\n",
-       "      <td>0.253874</td>\n",
-       "      <td>1.010842</td>\n",
-       "      <td>0.436865</td>\n",
+       "      <td>0.150866</td>\n",
+       "      <td>0.319384</td>\n",
+       "      <td>0.470250</td>\n",
+       "      <td>0.746322</td>\n",
+       "      <td>0.431486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3p</th>\n",
-       "      <td>0.113400</td>\n",
-       "      <td>0.311375</td>\n",
-       "      <td>0.499573</td>\n",
-       "      <td>0.565860</td>\n",
-       "      <td>0.391315</td>\n",
+       "      <td>0.062978</td>\n",
+       "      <td>0.149572</td>\n",
+       "      <td>0.217114</td>\n",
+       "      <td>0.356988</td>\n",
+       "      <td>0.246314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2i</th>\n",
-       "      <td>0.251105</td>\n",
-       "      <td>0.448961</td>\n",
-       "      <td>0.665198</td>\n",
-       "      <td>1.313097</td>\n",
-       "      <td>0.644156</td>\n",
+       "      <td>0.155744</td>\n",
+       "      <td>0.464329</td>\n",
+       "      <td>0.675212</td>\n",
+       "      <td>1.114389</td>\n",
+       "      <td>0.583750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3i</th>\n",
-       "      <td>0.012945</td>\n",
-       "      <td>0.495327</td>\n",
-       "      <td>0.689878</td>\n",
-       "      <td>1.373284</td>\n",
-       "      <td>0.596254</td>\n",
+       "      <td>0.121675</td>\n",
+       "      <td>0.407741</td>\n",
+       "      <td>0.636852</td>\n",
+       "      <td>1.025176</td>\n",
+       "      <td>0.644173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ip</th>\n",
-       "      <td>0.105085</td>\n",
-       "      <td>0.112908</td>\n",
-       "      <td>0.163072</td>\n",
-       "      <td>0.295255</td>\n",
-       "      <td>0.268965</td>\n",
+       "      <td>0.015701</td>\n",
+       "      <td>0.070207</td>\n",
+       "      <td>0.133012</td>\n",
+       "      <td>0.340716</td>\n",
+       "      <td>0.231943</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pi</th>\n",
-       "      <td>0.084397</td>\n",
-       "      <td>0.179000</td>\n",
-       "      <td>0.188597</td>\n",
-       "      <td>0.703355</td>\n",
-       "      <td>0.338161</td>\n",
+       "      <td>0.040637</td>\n",
+       "      <td>0.104980</td>\n",
+       "      <td>0.152874</td>\n",
+       "      <td>0.311554</td>\n",
+       "      <td>0.303205</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           1         3         5         10       mrr\n",
-       "1p  1.876706  5.326477  7.221794  11.578818  5.211004\n",
-       "2p  0.071693  0.200202  0.253874   1.010842  0.436865\n",
-       "3p  0.113400  0.311375  0.499573   0.565860  0.391315\n",
-       "2i  0.251105  0.448961  0.665198   1.313097  0.644156\n",
-       "3i  0.012945  0.495327  0.689878   1.373284  0.596254\n",
-       "ip  0.105085  0.112908  0.163072   0.295255  0.268965\n",
-       "pi  0.084397  0.179000  0.188597   0.703355  0.338161"
+       "           1         3         5        10       mrr\n",
+       "1p  1.400165  3.759938  5.508668  8.765593  3.836776\n",
+       "2p  0.150866  0.319384  0.470250  0.746322  0.431486\n",
+       "3p  0.062978  0.149572  0.217114  0.356988  0.246314\n",
+       "2i  0.155744  0.464329  0.675212  1.114389  0.583750\n",
+       "3i  0.121675  0.407741  0.636852  1.025176  0.644173\n",
+       "ip  0.015701  0.070207  0.133012  0.340716  0.231943\n",
+       "pi  0.040637  0.104980  0.152874  0.311554  0.303205"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
