--- a/notebooks/transe_traversal_complex_queries.ipynb
+++ b/notebooks/transe_traversal_complex_queries.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,42 +95,18 @@
     "                all_answers = test_data[query_structure]['answers'][qix:qix+test_batch_size]\n",
     "                targets = torch.arange(model.entity_embeddings(indices=None).shape[0]).to(model.device)\n",
     "                Q = fun_map[query_structure](model, entities, relations, targets, invs=inverses, p=1)\n",
-    "                for b in range(Q.shape[0]):\n",
-    "                    answers = all_answers[b]\n",
-    "                    for i in range(len(answers)):\n",
-    "                        a = answers[i]\n",
-    "                        msk = torch.ones(Q.shape[1], dtype=bool)\n",
-    "                        msk[answers] = False\n",
-    "                        msk[a] = True\n",
-    "                        rank = rank_based_evaluator.compute_rank_from_scores(Q[b,a].unsqueeze(0), Q[b,msk].unsqueeze(0))\n",
-    "                        avg_rank = rank['realistic'].cpu().numpy()\n",
-    "                        all_avg_ranks.append(avg_rank[0])\n",
-    "            all_avg_ranks = np.array(all_avg_ranks)\n",
-    "#                 max_len = len(max(all_answers, key=len))\n",
-    "#                 mask = np.ones(Q.shape, dtype=bool)\n",
-    "#                 for i in range(max_len):\n",
-    "#                     tmask = mask.copy()\n",
-    "#                     answers = []\n",
-    "#                     idxs = []\n",
-    "#                     for j in range(len(all_answers)):\n",
-    "#                         a = all_answers[j]\n",
-    "#                         if len(a) > i:\n",
-    "#                             answers.append(a[i])\n",
-    "#                             idxs.append(j)\n",
-    "#                             tmask[j,] = 0\n",
-    "#                         else:\n",
-    "#                             tmask[j,:] = 0\n",
-    "# #                     answers = [a[i] if len(a) > i else a[-1] for a in all_answers ]\n",
-    "# #                     idxs = np.arange(len(answers))\n",
-    "# #                     answers = [a[i] for a in all_answers if len(a) > i]\n",
-    "# #                     idxs = [j for j in range(len(all_answers)) if len(all_answers[j]) > i]\n",
-    "#                     if len(answers) > 0:\n",
-    "#                         print(tmask)\n",
-    "#                         ranks = rank_based_evaluator.compute_rank_from_scores(Q[np.vstack((idxs, answers))].unsqueeze(1), Q[tmask])\n",
-    "#                         avg_rank = ranks['realistic'].cpu().numpy()\n",
-    "#                         all_avg_ranks.append(avg_rank - i + 1)\n",
-    "#             all_avg_ranks = np.concatenate(all_avg_ranks)\n",
-    "            \n",
+    "                answer_lens = np.array([len(a) for a in all_answers])\n",
+    "                max_len = answer_lens.max()\n",
+    "                for l in np.unique(answer_lens):\n",
+    "                    idxs = np.where(answer_lens == l)[0]\n",
+    "                    answers = [all_answers[j] for j in idxs]\n",
+    "                    if len(answers) > 0:\n",
+    "                        filter_fix = torch.arange(l)\n",
+    "                        for aix in range(len(idxs)):\n",
+    "                            ranks = rank_based_evaluator.compute_rank_from_scores(Q[idxs[aix],answers[aix]].unsqueeze(1), Q[idxs[aix],:].unsqueeze(0))\n",
+    "                            avg_rank = (torch.sort(ranks['realistic'].cpu(), dim=0)[0] - filter_fix).numpy()\n",
+    "                            all_avg_ranks.append(avg_rank)\n",
+    "            all_avg_ranks = np.concatenate(all_avg_ranks)\n",
     "            rd = {k: np.mean(all_avg_ranks <= k) for k in ks}\n",
     "            mrr = np.reciprocal(stats.hmean(all_avg_ranks))\n",
     "            rd['mrr'] = mrr if isinstance(mrr, float) else mrr[0]\n",
@@ -143,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 8/1631 [00:00<00:21, 76.66it/s]"
+      "  3%|▎         | 47/1631 [00:00<00:03, 460.37it/s]"
      ]
     },
     {
@@ -174,8 +150,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1631/1631 [03:10<00:00,  8.55it/s]\n",
-      "  0%|          | 0/489 [00:00<?, ?it/s]"
+      "100%|██████████| 1631/1631 [00:03<00:00, 484.58it/s]\n",
+      "  4%|▍         | 22/489 [00:00<00:02, 219.78it/s]"
      ]
     },
     {
@@ -189,8 +165,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 489/489 [04:40<00:00,  1.74it/s]\n",
-      "  0%|          | 0/487 [00:00<?, ?it/s]"
+      "100%|██████████| 489/489 [00:02<00:00, 212.48it/s]\n",
+      "  4%|▍         | 19/487 [00:00<00:02, 177.79it/s]"
      ]
     },
     {
@@ -204,8 +180,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 487/487 [07:03<00:00,  1.15it/s]\n",
-      "  0%|          | 0/426 [00:00<?, ?it/s]"
+      "100%|██████████| 487/487 [00:03<00:00, 153.14it/s]\n",
+      " 10%|▉         | 41/426 [00:00<00:00, 409.17it/s]"
      ]
     },
     {
@@ -219,8 +195,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 426/426 [00:53<00:00,  7.95it/s]\n",
-      "  0%|          | 0/320 [00:00<?, ?it/s]"
+      "100%|██████████| 426/426 [00:01<00:00, 406.46it/s]\n",
+      " 13%|█▎        | 43/320 [00:00<00:00, 422.45it/s]"
      ]
     },
     {
@@ -234,8 +210,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 320/320 [00:52<00:00,  6.08it/s]\n",
-      "  0%|          | 0/455 [00:00<?, ?it/s]"
+      "100%|██████████| 320/320 [00:00<00:00, 416.55it/s]\n",
+      "  5%|▍         | 22/455 [00:00<00:01, 218.62it/s]"
      ]
     },
     {
@@ -249,8 +225,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 455/455 [04:15<00:00,  1.78it/s]\n",
-      "  0%|          | 0/429 [00:00<?, ?it/s]"
+      "100%|██████████| 455/455 [00:01<00:00, 231.58it/s]\n",
+      "  8%|▊         | 33/429 [00:00<00:01, 322.73it/s]"
      ]
     },
     {
@@ -264,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 429/429 [01:50<00:00,  3.88it/s]\n"
+      "100%|██████████| 429/429 [00:01<00:00, 333.35it/s]\n"
      ]
     },
     {
@@ -298,59 +274,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1p</th>\n",
-       "      <td>1.400165</td>\n",
-       "      <td>3.759938</td>\n",
-       "      <td>5.508668</td>\n",
-       "      <td>8.765593</td>\n",
-       "      <td>3.836776</td>\n",
+       "      <td>1.361723</td>\n",
+       "      <td>3.726115</td>\n",
+       "      <td>5.475348</td>\n",
+       "      <td>8.785497</td>\n",
+       "      <td>3.848484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2p</th>\n",
-       "      <td>0.150866</td>\n",
-       "      <td>0.319384</td>\n",
-       "      <td>0.470250</td>\n",
-       "      <td>0.746322</td>\n",
-       "      <td>0.431486</td>\n",
+       "      <td>0.197761</td>\n",
+       "      <td>0.384988</td>\n",
+       "      <td>0.545521</td>\n",
+       "      <td>0.863863</td>\n",
+       "      <td>0.497643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3p</th>\n",
-       "      <td>0.062978</td>\n",
-       "      <td>0.149572</td>\n",
-       "      <td>0.217114</td>\n",
-       "      <td>0.356988</td>\n",
-       "      <td>0.246314</td>\n",
+       "      <td>0.060143</td>\n",
+       "      <td>0.137322</td>\n",
+       "      <td>0.208442</td>\n",
+       "      <td>0.362343</td>\n",
+       "      <td>0.247518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2i</th>\n",
-       "      <td>0.155744</td>\n",
-       "      <td>0.464329</td>\n",
-       "      <td>0.675212</td>\n",
-       "      <td>1.114389</td>\n",
-       "      <td>0.583750</td>\n",
+       "      <td>0.174503</td>\n",
+       "      <td>0.435820</td>\n",
+       "      <td>0.596292</td>\n",
+       "      <td>0.975990</td>\n",
+       "      <td>0.568644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3i</th>\n",
-       "      <td>0.121675</td>\n",
-       "      <td>0.407741</td>\n",
-       "      <td>0.636852</td>\n",
-       "      <td>1.025176</td>\n",
-       "      <td>0.644173</td>\n",
+       "      <td>0.141397</td>\n",
+       "      <td>0.450791</td>\n",
+       "      <td>0.754585</td>\n",
+       "      <td>1.178776</td>\n",
+       "      <td>0.681414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ip</th>\n",
-       "      <td>0.015701</td>\n",
-       "      <td>0.070207</td>\n",
-       "      <td>0.133012</td>\n",
-       "      <td>0.340716</td>\n",
-       "      <td>0.231943</td>\n",
+       "      <td>0.017834</td>\n",
+       "      <td>0.096621</td>\n",
+       "      <td>0.167281</td>\n",
+       "      <td>0.362329</td>\n",
+       "      <td>0.260058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pi</th>\n",
-       "      <td>0.040637</td>\n",
-       "      <td>0.104980</td>\n",
-       "      <td>0.152874</td>\n",
-       "      <td>0.311554</td>\n",
-       "      <td>0.303205</td>\n",
+       "      <td>0.048885</td>\n",
+       "      <td>0.102214</td>\n",
+       "      <td>0.152580</td>\n",
+       "      <td>0.331824</td>\n",
+       "      <td>0.300741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -358,16 +334,16 @@
       ],
       "text/plain": [
        "           1         3         5        10       mrr\n",
-       "1p  1.400165  3.759938  5.508668  8.765593  3.836776\n",
-       "2p  0.150866  0.319384  0.470250  0.746322  0.431486\n",
-       "3p  0.062978  0.149572  0.217114  0.356988  0.246314\n",
-       "2i  0.155744  0.464329  0.675212  1.114389  0.583750\n",
-       "3i  0.121675  0.407741  0.636852  1.025176  0.644173\n",
-       "ip  0.015701  0.070207  0.133012  0.340716  0.231943\n",
-       "pi  0.040637  0.104980  0.152874  0.311554  0.303205"
+       "1p  1.361723  3.726115  5.475348  8.785497  3.848484\n",
+       "2p  0.197761  0.384988  0.545521  0.863863  0.497643\n",
+       "3p  0.060143  0.137322  0.208442  0.362343  0.247518\n",
+       "2i  0.174503  0.435820  0.596292  0.975990  0.568644\n",
+       "3i  0.141397  0.450791  0.754585  1.178776  0.681414\n",
+       "ip  0.017834  0.096621  0.167281  0.362329  0.260058\n",
+       "pi  0.048885  0.102214  0.152580  0.331824  0.300741"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,6 +352,13 @@
     "extension_df = test_batch(model, datasets['test-easy'], model_inverses=True, test_query_structures=test_query_structures)\n",
     "extension_df*100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
