--- a/notebooks/Remap_BetaE_Data-NELL995.ipynb
+++ b/notebooks/Remap_BetaE_Data-NELL995.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "import numpy as np\n",
     "import pykeen\n",
-    "from pykeen.pipeline import pipeline"
+    "from pykeen.pipeline import pipeline\n",
+    "from pykeen.triples import TriplesFactory"
    ]
   },
   {
@@ -64,25 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're trying to map triples with 30 entities and 0 relations that are not in the training set. These triples will be excluded from the mapping.\n",
-      "In total 28 from 20466 triples were filtered out\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ds = pykeen.datasets.get_dataset(dataset=dataset, dataset_kwargs=dict(create_inverse_triples=False))\n",
-    "training = ds.training.mapped_triples\n",
-    "relid2label = ds.training.relation_id_to_label \n",
+    "ds = TriplesFactory.from_path(os.path.join(betae_path, 'train.txt'),\n",
+    "                                            create_inverse_triples=False)\n",
+    "training = ds.mapped_triples\n",
+    "relid2label = ds.relation_id_to_label \n",
     "label2relid = {v:k for k,v in relid2label.items()}\n",
     "\n",
-    "entid2label = ds.training.entity_id_to_label \n",
+    "entid2label = ds.entity_id_to_label \n",
     "label2entid = {v:k for k,v in entid2label.items()}"
    ]
   },
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,36 +113,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def map_ent(e):\n",
-    "#     return label2entid[id2ent[e]]\n",
-    "\n",
-    "# def map_rel(r):\n",
-    "#     relname = id2rel[r]\n",
-    "#     return label2relid[relname[1:]]\n",
-    "\n",
-    "# def orient_rel(r):\n",
-    "#     orientation = 1\n",
-    "#     relname = id2rel[r]\n",
-    "#     if relname[0] == '-':\n",
-    "#         orientation = -1\n",
-    "#     return orientation\n",
     "def map_ent(e):\n",
-    "    return e\n",
+    "    return label2entid[str(e)]\n",
     "\n",
     "def map_rel(r):\n",
-    "    return r\n",
+    "    return label2relid[str(r)]\n",
     "\n",
     "def orient_rel(r):\n",
-    "    return 1"
+    "    orientation = 1\n",
+    "    relname = id2rel[r]\n",
+    "    if '_reverse' in relname:\n",
+    "        orientation = -1\n",
+    "    return orientation\n",
+    "# def map_ent(e):\n",
+    "#     return e\n",
+    "\n",
+    "# def map_rel(r):\n",
+    "#     return r\n",
+    "\n",
+    "# def orient_rel(r):\n",
+    "#     return 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63341"
+       "63356"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +342,7 @@
        "399"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,16 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17298, 18662,  1570, ..., 19925,  5623,    46])"
+       "array([ 8111,  9627,  6336, ..., 11030, 51369, 40001])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
