--- a/notebooks/Resave_BetaE_Data-NELL995.ipynb
+++ b/notebooks/Resave_BetaE_Data-NELL995.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "import numpy as np\n",
     "import pykeen\n",
-    "from pykeen.pipeline import pipeline"
+    "from pykeen.pipeline import pipeline\n",
+    "from pykeen.triples import TriplesFactory"
    ]
   },
   {
@@ -66,23 +67,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're trying to map triples with 30 entities and 0 relations that are not in the training set. These triples will be excluded from the mapping.\n",
-      "In total 28 from 20466 triples were filtered out\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ds = pykeen.datasets.get_dataset(dataset=dataset, dataset_kwargs=dict(create_inverse_triples=True))\n",
-    "training = ds.training.mapped_triples\n",
-    "relid2label = ds.training.relation_id_to_label \n",
+    "ds = TriplesFactory.from_path(os.path.join(betae_path, 'train.txt'),\n",
+    "                                            create_inverse_triples=False)\n",
+    "training = ds.mapped_triples\n",
+    "relid2label = ds.relation_id_to_label \n",
     "label2relid = {v:k for k,v in relid2label.items()}\n",
     "\n",
-    "entid2label = ds.training.entity_id_to_label \n",
+    "entid2label = ds.entity_id_to_label \n",
     "label2entid = {v:k for k,v in entid2label.items()}"
    ]
   },
@@ -94,7 +87,7 @@
     {
      "data": {
       "text/plain": [
-       "474"
+       "400"
       ]
      },
      "execution_count": 5,
@@ -108,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_ent(e):\n",
-    "    return e\n",
+    "    return label2entid[str(e)]\n",
     "\n",
     "def map_rel(r):\n",
-    "    return r\n",
+    "    return label2relid[str(r)]\n",
     "\n",
     "def orient_rel(r):\n",
     "    return 1"
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +309,7 @@
        "(3623,)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,22 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[184, 201],\n",
-       "       [186, 186],\n",
-       "       [ 14,  65],\n",
+       "array([[ 95, 115],\n",
+       "       [ 97,  97],\n",
+       "       [ 46, 362],\n",
        "       ...,\n",
-       "       [ 44, 133],\n",
-       "       [ 24, 350],\n",
-       "       [ 17,  44]])"
+       "       [339,  39],\n",
+       "       [157, 280],\n",
+       "       [ 79, 339]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,16 +346,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17298, 18662,  1570, ..., 19925,  5623,    46])"
+       "array([ 8111,  9627,  6336, ..., 11030, 51369, 40001])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
