--- a/notebooks/transe_traversal_complex_queries.ipynb
+++ b/notebooks/transe_traversal_complex_queries.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "dataset = 'FB15k-237'\n",
-    "savename = 'TransE_1000epochs_64embdim_SoftplusLossloss_1234seed_20210519-1452'\n",
+    "savename = 'TransE_500epochs_64embdim_MarginRankingLossloss_11seed_20210525-1745'\n",
     "\n",
     "savedir = f'/home/gebhart/projects/sheaf_kg/data/{dataset}'\n",
     "complex_dataset_loc = f'/home/gebhart/projects/sheaf_kg/data/{dataset}-betae'\n",
@@ -83,7 +83,7 @@
     "            all_avg_ranks = []\n",
     "            cnt = 0\n",
     "            num_test = len(test_data[query_structure]['answers'])\n",
-    "            for qix in tqdm(range(0, num_test//2, test_batch_size)):\n",
+    "            for qix in tqdm(range(0, num_test, test_batch_size)):\n",
     "                if num_test - qix == 1:\n",
     "                    continue\n",
     "                entities = test_data[query_structure]['entities'][qix:qix+test_batch_size]\n",
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 46/1631 [00:00<00:03, 457.90it/s]"
+      "  3%|▎         | 45/1631 [00:00<00:03, 445.24it/s]"
      ]
     },
     {
@@ -149,8 +149,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1631/1631 [00:03<00:00, 483.56it/s]\n",
-      "  4%|▎         | 18/489 [00:00<00:02, 175.23it/s]"
+      "100%|██████████| 1631/1631 [00:03<00:00, 487.08it/s]\n",
+      "  4%|▍         | 22/489 [00:00<00:02, 211.91it/s]"
      ]
     },
     {
@@ -164,8 +164,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 489/489 [00:02<00:00, 210.12it/s]\n",
-      "  3%|▎         | 13/487 [00:00<00:03, 124.91it/s]"
+      "100%|██████████| 489/489 [00:02<00:00, 203.94it/s]\n",
+      "  3%|▎         | 16/487 [00:00<00:02, 159.72it/s]"
      ]
     },
     {
@@ -179,8 +179,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 487/487 [00:03<00:00, 148.85it/s]\n",
-      " 10%|▉         | 41/426 [00:00<00:00, 397.13it/s]"
+      "100%|██████████| 487/487 [00:03<00:00, 152.27it/s]\n",
+      "  9%|▉         | 40/426 [00:00<00:00, 399.28it/s]"
      ]
     },
     {
@@ -194,8 +194,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 426/426 [00:01<00:00, 398.49it/s]\n",
-      " 13%|█▎        | 43/320 [00:00<00:00, 428.09it/s]"
+      "100%|██████████| 426/426 [00:01<00:00, 409.72it/s]\n",
+      " 13%|█▎        | 43/320 [00:00<00:00, 415.85it/s]"
      ]
     },
     {
@@ -209,8 +209,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 320/320 [00:00<00:00, 401.61it/s]\n",
-      "  5%|▌         | 23/455 [00:00<00:01, 223.40it/s]"
+      "100%|██████████| 320/320 [00:00<00:00, 415.75it/s]\n",
+      "  5%|▌         | 24/455 [00:00<00:01, 235.05it/s]"
      ]
     },
     {
@@ -224,8 +224,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 455/455 [00:02<00:00, 226.38it/s]\n",
-      "  8%|▊         | 33/429 [00:00<00:01, 320.33it/s]"
+      "100%|██████████| 455/455 [00:02<00:00, 226.09it/s]\n",
+      "  8%|▊         | 35/429 [00:00<00:01, 342.20it/s]"
      ]
     },
     {
@@ -239,7 +239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 429/429 [00:01<00:00, 325.37it/s]\n"
+      "100%|██████████| 429/429 [00:01<00:00, 326.62it/s]\n"
      ]
     },
     {
@@ -273,73 +273,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1p</th>\n",
-       "      <td>1.426633</td>\n",
-       "      <td>3.780749</td>\n",
-       "      <td>5.617795</td>\n",
-       "      <td>8.997517</td>\n",
-       "      <td>3.940811</td>\n",
+       "      <td>3.112179</td>\n",
+       "      <td>8.138414</td>\n",
+       "      <td>11.266121</td>\n",
+       "      <td>16.544893</td>\n",
+       "      <td>7.490124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2p</th>\n",
-       "      <td>0.190643</td>\n",
-       "      <td>0.410875</td>\n",
-       "      <td>0.579794</td>\n",
-       "      <td>0.880178</td>\n",
-       "      <td>0.505845</td>\n",
+       "      <td>0.375980</td>\n",
+       "      <td>0.818688</td>\n",
+       "      <td>1.181932</td>\n",
+       "      <td>1.831645</td>\n",
+       "      <td>0.947967</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3p</th>\n",
-       "      <td>0.052731</td>\n",
-       "      <td>0.127994</td>\n",
-       "      <td>0.193501</td>\n",
-       "      <td>0.333343</td>\n",
-       "      <td>0.229416</td>\n",
+       "      <td>0.278972</td>\n",
+       "      <td>0.603541</td>\n",
+       "      <td>0.827340</td>\n",
+       "      <td>1.274222</td>\n",
+       "      <td>0.687534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2i</th>\n",
-       "      <td>0.140580</td>\n",
-       "      <td>0.412254</td>\n",
-       "      <td>0.590782</td>\n",
-       "      <td>0.904716</td>\n",
-       "      <td>0.510498</td>\n",
+       "      <td>0.252323</td>\n",
+       "      <td>0.735788</td>\n",
+       "      <td>1.192548</td>\n",
+       "      <td>1.992799</td>\n",
+       "      <td>0.833231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3i</th>\n",
-       "      <td>0.125003</td>\n",
-       "      <td>0.434960</td>\n",
-       "      <td>0.715579</td>\n",
-       "      <td>1.147988</td>\n",
-       "      <td>0.660997</td>\n",
+       "      <td>0.179085</td>\n",
+       "      <td>0.605278</td>\n",
+       "      <td>1.062013</td>\n",
+       "      <td>1.745034</td>\n",
+       "      <td>0.680853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ip</th>\n",
-       "      <td>0.031967</td>\n",
-       "      <td>0.119421</td>\n",
-       "      <td>0.203450</td>\n",
-       "      <td>0.431104</td>\n",
-       "      <td>0.281726</td>\n",
+       "      <td>0.314659</td>\n",
+       "      <td>0.758186</td>\n",
+       "      <td>1.050987</td>\n",
+       "      <td>1.680077</td>\n",
+       "      <td>0.817312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pi</th>\n",
-       "      <td>0.042757</td>\n",
-       "      <td>0.099931</td>\n",
-       "      <td>0.142687</td>\n",
-       "      <td>0.307747</td>\n",
-       "      <td>0.322684</td>\n",
+       "      <td>0.223561</td>\n",
+       "      <td>0.500398</td>\n",
+       "      <td>0.752838</td>\n",
+       "      <td>1.288090</td>\n",
+       "      <td>0.631238</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           1         3         5        10       mrr\n",
-       "1p  1.426633  3.780749  5.617795  8.997517  3.940811\n",
-       "2p  0.190643  0.410875  0.579794  0.880178  0.505845\n",
-       "3p  0.052731  0.127994  0.193501  0.333343  0.229416\n",
-       "2i  0.140580  0.412254  0.590782  0.904716  0.510498\n",
-       "3i  0.125003  0.434960  0.715579  1.147988  0.660997\n",
-       "ip  0.031967  0.119421  0.203450  0.431104  0.281726\n",
-       "pi  0.042757  0.099931  0.142687  0.307747  0.322684"
+       "           1         3          5         10       mrr\n",
+       "1p  3.112179  8.138414  11.266121  16.544893  7.490124\n",
+       "2p  0.375980  0.818688   1.181932   1.831645  0.947967\n",
+       "3p  0.278972  0.603541   0.827340   1.274222  0.687534\n",
+       "2i  0.252323  0.735788   1.192548   1.992799  0.833231\n",
+       "3i  0.179085  0.605278   1.062013   1.745034  0.680853\n",
+       "ip  0.314659  0.758186   1.050987   1.680077  0.817312\n",
+       "pi  0.223561  0.500398   0.752838   1.288090  0.631238"
       ]
      },
      "execution_count": 6,
